Adding similarity score, pending testing